docs/grammar.txt
<Program>               ::= ( <StructDecl> | <FunctionDecl> | <Stmt> )*

<DefineDirective>       ::= '#define' Identifier /[^\n]+/
<IncludeDirective>       ::= '#include' String

<StructDecl>            ::= 'struct' Identifier ('{' <StructFields>? '}' | ';')
<StructFields>          ::= <StructField> ( ',' <StructField> )*
<StructField>           ::= Identifier ':' <Type>

<FunctionDecl>          ::= ('extern')? 'func' Identifier '(' <Params>? ')' <ReturnType>? ( <Block> | ';' )
<Params>                ::= <Param> ( ',' <Param> )*
<Param>                 ::= <TypePrefix>? Identifier ':' <Type>
<ReturnType>            ::= 'returns' '(' Identifier ':' <Type> ')'

<Block>                 ::= '{' <Stmt>* '}'

<Stmt>                  ::= <VarDecl> ';'
                          | <IfStmt>
                          | <ForStmt>
                          | <WhileStmt>
                          | <SwitchStmt>
                          | 'read' <Expr> ';'
                          | <PrintStmt> ';'
                          | <Block>
                          | <Expr> ';'
                          | <ReturnStmt> ';'
                          | <BreakStmt> ';'
                          | <ContinueStmt> ';'
                          | <FreeStmt> ';'
                          | <ErrorStmt> ';'
                          | <ExitStmt> ';'
                          | 'asm' <Block> ';'

<VarDecl>               ::= <TypePrefix>? Identifier ( ( ':' <Type> ( '=' <Expr> )? ) | ( ':=' <Expr> ) )

<IfStmt>                ::= 'if' '(' <Expr> ')' <Block> ( 'else' ( <Block> | <IfStmt> ) )?

<ForStmt>               ::= 'for' '(' (<VarDecl> | <Expr>)? ';' <Expr>? ';' <Expr>? ')' <Block>
<WhileStmt>             ::= 'while' '(' <Expr> ')' <Block>
<BreakStmt>             ::= 'break'
<ContinueStmt>          ::= 'continue'

<EnumDecl>              ::= 'enum' <Identifier> '{' <EnumVariant> (',' <EnumVariant>)* '}'
<EnumVariant>           ::= <Identifier> ('{' <StructField>* '}')?

<SwitchStmt>            ::= 'switch' '(' <Expr> ')' '{' <Case>* '}'
<Case>                  ::= 'case' <CasePattern> ':' <Block> | 'default' ':' <Block>
<CasePattern>           ::= <Identifier> '::' <Identifier> ('(' <Identifier> ')')?  // Enum Match
                          | <Expr>                                                  // Standard Match

<PrintStmt>             ::= 'print'  <Expr> ( ',' <Expr> )*
<ErrorStmt>             ::= 'error' <Expr> ( ',' <Expr> )*

<ReturnStmt>            ::= 'return' <Expr>?
<ExitStmt>              ::= 'exit' <Expr>?

<FreeStmt>              ::= 'free' <Expr>

<Expr>                  ::= <AssignmentExpr>
<AssignmentExpr>        ::= <LogicalOrExpr> ( '=' <AssignmentExpr> )?

<LogicalOrExpr>         ::= <LogicalAndExpr> ( 'or' <LogicalAndExpr> )*
<LogicalAndExpr>        ::= <BitwiseOrExpr> ( 'and' <BitwiseOrExpr> )*
<BitwiseOrExpr>         ::= <BitwiseXorExpr> ( '|' <BitwiseXorExpr> )*
<BitwiseXorExpr>        ::= <BitwiseAndExpr> ( '^' <BitwiseAndExpr> )*
<BitwiseAndExpr>        ::= <EqualityExpr> ( '&' <EqualityExpr> )*
<EqualityExpr>          ::= <RelationalExpr> ( ( '==' | '!=' ) <RelationalExpr> )*
<RelationalExpr>        ::= <ShiftExpr> ( ( '<' | '>' | '<=' | '>=' ) <ShiftExpr> )*
<ShiftExpr>             ::= <AdditiveExpr> ( ( '<<' | '>>' ) <AdditiveExpr> )*
<AdditiveExpr>          ::= <MultiplicativeExpr> ( ( '+' | '-') <MultiplicativeExpr> )*
<MultiplicativeExpr>    ::= <UnaryExpr> ( ( '*' | '/' | '%' ) <UnaryExpr> )*
<UnaryExpr>             ::= ( '&' <TypePrefix>? | '*' | '!' | '-') <UnaryExpr> | <PostfixExpr>
<PostfixExpr>           ::= <PrimaryExpr> ( <PostfixSuffix> )*
<PostfixSuffix>         ::= '.' Identifier | '(' <Args>? ')' | '[' <Expr> ']'

<PrimaryExpr>           ::= <PrimitiveLiteral>
                          | Identifier
                          | '(' <Expr> ')'
                          | <StructLiteral>
                          | <EnumLiteral>
                          | <NewExpr>
                          | <CastExpr>
                          | <SizeOfExpr>

<PrimitiveLiteral>      ::= Integer | Float | String | Bool | 'null'

<StructLiteral>         ::= Identifier '{' ( Identifier '=' <Expr> ( ',' Identifier '=' <Expr> )* )? '}'
<EnumLiteral>           ::= Identifier '::' Identifier ('{' ( Identifier '=' <Expr> ( ',' Identifier '=' <Expr> )* )? '}')?
<NewExpr>               ::= 'new' '<' <TypePrefix>? <Type> '>' ( '[' <Expr> ']' | '(' (<StructLiteral> | <Expr>)? ')' )
<CastExpr>              ::= 'cast' '<' <Type> '>' '(' <Expr> ')'
<SizeOfExpr>            ::= 'sizeof' '<' <Type> '>'

<Args>                  ::= <Expr> ( ',' <Expr> )*

<Type>                  ::= <BasicType> | <StructType> | <PointerType> | <FunctionType>
<BasicType>             ::= 'i32' | 'u8' | 'bool' | 'u0' | 'u16' | 'u32' | 'u64' | 'i8' | 'i16' | 'i64' | 'f64' | 'string'
<StructType>            ::= Identifier
<PointerType>           ::= 'ptr' '<' <TypePrefix>? <Type> '>'

<FunctionType>          ::= 'func' '(' ((<TypePrefix> ':')? <Type> ( ',' (<TypePrefix> ':')? <Type> )*)? ')' '->' <Type>

<TypePrefix>            ::= 'mut' | 'imm'

Integer                 ::= [0-9]+
Float                   ::= [0-9]+ '.' [0-9]+
String                  ::= '"' ( Escape | [^"] )* '"'
Bool                    ::= 'true' | 'false'
