src/parser/parser.cpp
#include "parser.h"
#include <string_view>
#include "../util.h"

struct ParsePanic : public std::runtime_error {
  ParsePanic() : std::runtime_error("ParsePanic") {}
};

#define _consume(_type)    \
  do {                     \
    if (!consume(_type)) { \
      throw ParsePanic();  \
    }                      \
  } while (0)

#define _alloc(_type, ...) m_arena->make<_type>(__VA_ARGS__)

// == Movement Operations through Tokens ==
/* retrives the current token at m_pos, guarded by EOF_TOK */
const Token* Parser::current() {
  return &m_tokens[m_pos];
}

/* return token at the m_pos in the parser and then increment pos */
const Token* Parser::advance() {
  const Token* curr = current();
  if (curr->get_type() != TokenType::EOF_TOK) m_pos++;
  return curr;
}

/* consume an expected type character at current position and increment position */
bool Parser::consume(TokenType type) {
  const Token* curr = current();
  if (curr->get_type() != type) {
    if (curr->get_type() == TokenType::EOF_TOK) {
      m_logger->report(Diag::Error(curr->get_span(), "Unexpected end of file"));
    } else {
      m_logger->report(Diag::ExpectedToken(curr->get_span(), token_type_to_string(type), token_type_to_string(curr->get_type())));
    }
    return false;
  }
  advance();
  return true;
}

/* check if the type of the Token at m_pos of the parser equals type */
bool Parser::match(TokenType type) const {
  return m_tokens[m_pos].get_type() == type;
}

/* check if the next token (if any) is the passed argument */
bool Parser::peek_next(TokenType type) const {
  if (m_pos + 1 < m_tokens.size()) {
    return m_tokens[m_pos + 1].get_type() == type;
  }
  return false;
}

// == Panic Mode Recovery ==
bool Parser::is_sync_point(const Token* tok) const {
  if (!tok) return false;
  switch (tok->get_type()) {
    case TokenType::EOF_TOK:
    case TokenType::FUNC:
    case TokenType::IF:
    case TokenType::STRUCT:
    case TokenType::ENUM:
    case TokenType::WHILE:
    case TokenType::FOR:
    case TokenType::RETURN:
    case TokenType::READ:
    case TokenType::PRINT:
    case TokenType::LBRACE:
    case TokenType::RBRACE:
      return true;
    default: return false;
  }
}

void Parser::synchronize() {
  // advance once unconditionally
  if (current()->get_type() != TokenType::EOF_TOK) advance();
  while (current()->get_type() != TokenType::EOF_TOK) {
    if (is_sync_point(current())) return;
    advance();
  }
}

std::vector<AstPtr> Parser::parse_program(SymTab* symtab, const std::vector<Token>& tokens) {
  m_symtab = symtab;
  m_tokens = tokens;
  m_pos = 0;
  m_root.clear();

  while (!match(TokenType::EOF_TOK)) {
    m_root.push_back(parse_toplevel_declaration());
  }

  return m_root;
}

AstPtr Parser::parse_toplevel_declaration() {
  try {
    if (match(TokenType::STRUCT)) {
      return parse_struct_decl();
    } else if (match(TokenType::ENUM)) {
      return parse_enum_decl();
    } else if (match(TokenType::FUNC) || match(TokenType::EXTERN)) {
      return parse_function_decl();
    } else {
      return parse_statement();
    }
  } catch (const ParsePanic&) {
    PoisonStmtNode* poison = _alloc(PoisonStmtNode, current(), m_symtab->current_scope());
    synchronize();
    return poison;
  }
}

bool Parser::parse_mutability_prefix() {
  bool is_mut = false; // imm by default
  if (match(TokenType::MUT)) {
    advance();
    is_mut = true;
  } else if (match(TokenType::IMM)) {
    advance();
  }
  return is_mut;
}

// Enums
// <EnumDecl> ::= 'enum' Identifier '{' <EnumVariant> (',' <EnumVariant>)* '}'
AstPtr Parser::parse_enum_decl() {
  _consume(TokenType::ENUM);

  const Token* name_tok = current();
  _consume(TokenType::IDENTIFIER);

  std::string_view enum_name = name_tok->get_lexeme();
  size_t scope_id = m_symtab->current_scope();
  IdentPtr name_ident = _alloc(IdentifierNode, name_tok, scope_id, enum_name);

  // forward declare enum type to support internal pointers if needed
  Type* enum_type = _alloc(Type, Type::Enum{enum_name, {}}, scope_id, Type::PTR_SIZE, Type::PTR_SIZE);
  Type* sym_enum_type = m_symtab->declare_type(enum_name, enum_type, scope_id);
  if (!sym_enum_type) {
    m_logger->report(Diag::DuplicateDeclaration(name_tok->get_span(), std::string(enum_name)));
    throw ParsePanic();
  }

  EnumDeclPtr enum_node = _alloc(EnumDeclNode, name_tok, scope_id, name_ident, std::vector<EnumVariantAST>{});
  if (!m_symtab->declare_enum(enum_name, enum_node, scope_id)) {
    m_logger->report(Diag::DuplicateDeclaration(name_tok->get_span(), "enum " + std::string(enum_name)));
    throw ParsePanic();
  }

  std::vector<EnumVariantAST> ast_variants;
  std::vector<Type::EnumVariant> type_variants;
  std::uint32_t current_tag = 0;

  m_symtab->enter_scope();
  try {
    _consume(TokenType::LBRACE);
    if (!match(TokenType::RBRACE)) {
      do {
        const Token* variant_tok = current();
        _consume(TokenType::IDENTIFIER);
        std::string_view variant_name = variant_tok->get_lexeme();
        IdentPtr variant_ident = _alloc(IdentifierNode, variant_tok, m_symtab->current_scope(), variant_name);

        std::vector<StructFieldPtr> payload_fields;
        Type* payload_type = nullptr;

        if (match(TokenType::LBRACE)) {
          _consume(TokenType::LBRACE);
          m_symtab->enter_scope(); // encapsulate payload fields
          try {
            if (!match(TokenType::RBRACE)) {
              do {
                payload_fields.push_back(parse_struct_field());
              } while (match(TokenType::COMMA) && advance());
            }
            _consume(TokenType::RBRACE);
          } catch (const ParsePanic&) {
            m_symtab->exit_scope();
            throw;
          }
          m_symtab->exit_scope();

          // create anonymous struct type for the payload
          std::string payload_name = std::string(enum_name) + "::" + std::string(variant_name);
          std::string_view allocated_name = m_arena->make_string(payload_name);
          payload_type = _alloc(Type, Type::Named(allocated_name), scope_id, 0); // size populated in typechecker
          payload_type->set_aggregate(true);

          // register anonymous struct in symbol table
          m_symtab->declare_type(allocated_name, payload_type, scope_id);
          StructDeclPtr payload_struct = _alloc(StructDeclNode, variant_tok, scope_id, payload_type, payload_fields);
          m_symtab->declare_struct(allocated_name, payload_struct, scope_id);
        }

        ast_variants.push_back({variant_ident, payload_fields});
        type_variants.push_back({variant_name, payload_type, current_tag++});

      } while (match(TokenType::COMMA) && advance());
    }
    _consume(TokenType::RBRACE);
  } catch (const ParsePanic&) {
    m_symtab->exit_scope();
    throw;
  }
  m_symtab->exit_scope();

  sym_enum_type->as<Type::Enum>().variants = std::move(type_variants);
  enum_node->variants = std::move(ast_variants);
  enum_node->type = sym_enum_type;

  return enum_node;
}

// Structs
// <StructDecl> ::= 'struct' Identifier ('{' <StructFields>? '}' | ';')
AstPtr Parser::parse_struct_decl() {
  _consume(TokenType::STRUCT);

  const Token* name_tok = current();
  _consume(TokenType::IDENTIFIER);

  std::string_view type_name = name_tok->get_lexeme();
  size_t scope_id = m_symtab->current_scope();

  bool is_opaque_decl = match(TokenType::SEMICOLON);

  Type* existing_sym_type = m_symtab->lookup<Type>(type_name, scope_id);
  StructDeclPtr existing_struct_node = m_symtab->lookup_struct(type_name, scope_id);

  // check for redefinition of struct type
  if (existing_sym_type && existing_struct_node) {
    if (existing_sym_type->is_complete() && !is_opaque_decl) {
      m_logger->report(Diag::DuplicateDeclaration(name_tok->get_span(), "struct " + std::string(type_name)));
      throw ParsePanic();
    }
  }

  Type* sym_struct_type = existing_sym_type;
  StructDeclPtr struct_node = existing_struct_node;

  if (!sym_struct_type) {
    // declare the new struct type (size will be re-evaluated in the type checker to
    //  handle other nested struct type sizes that need to be resolved)
    Type* struct_type = _alloc(Type, Type::Named(type_name), scope_id, Type::PTR_SIZE);

    struct_type->set_aggregate(true);
    struct_type->set_complete(false);
    sym_struct_type = m_symtab->declare_type(type_name, struct_type, scope_id);

    // now link the struct declaration node to the symbol table for the IR
    struct_node = _alloc(StructDeclNode, name_tok, scope_id, sym_struct_type, std::vector<StructFieldPtr>{});
    m_symtab->declare_struct(type_name, struct_node, scope_id);
  }

  if (is_opaque_decl) {
    advance();
    return _alloc(StructDeclNode, name_tok, scope_id, sym_struct_type, std::vector<StructFieldPtr>{});
  }

  sym_struct_type->set_complete(true);

  m_symtab->enter_scope(); // new scope for the contents
  try {
    _consume(TokenType::LBRACE);

    if (!match(TokenType::RBRACE)) {
      do {
        struct_node->fields.push_back(parse_struct_field());
      } while (match(TokenType::COMMA) && advance());
    }

    _consume(TokenType::RBRACE);
  } catch (const ParsePanic&) {
    m_symtab->exit_scope();
    synchronize();
    if (match(TokenType::RBRACE)) advance();
    return struct_node; // return partially-built struct

  }
  m_symtab->exit_scope();

  return struct_node;
}

// <StructField> ::= Identifier ':' <Type>
StructFieldPtr Parser::parse_struct_field() {
  const Token* name_tok = current();
  _consume(TokenType::IDENTIFIER);

  std::string_view field_name = name_tok->get_lexeme();
  size_t scope_id = m_symtab->current_scope();

  IdentPtr name_ident = _alloc(IdentifierNode, name_tok, scope_id, field_name);
  _consume(TokenType::COLON);

  Type* type = parse_type();

  // field variables are always mutable
  Variable* field_var = _alloc(Variable, field_name, name_tok->get_span(),
      true, type, scope_id);

  // check if the field is a duplicate to another field
  if (!m_symtab->declare_variable(field_var->name, field_var, field_var->scope_id)) {
    m_logger->report(Diag::DuplicateDeclaration(name_tok->get_span(), std::string(name_tok->get_lexeme())));
    throw ParsePanic();
  }

  return _alloc(StructFieldNode, name_tok, scope_id, name_ident, type);
}

// Functions
// <FunctionDecl> ::= 'func' Identifier '(' <Params>? ')' <ReturnType>? <Block>
// <FunctionDecl> ::= 'extern' 'func' Identifier '(' <Params>? ')' <ReturnType>?;
FuncDeclPtr Parser::parse_function_decl() {
  bool is_ext = false;
  if (match(TokenType::EXTERN)) {
    is_ext = true;
    advance();
  }

  const Token* func_tok = current();
  _consume(TokenType::FUNC);

  const Token* name_tok = current();
  _consume(TokenType::IDENTIFIER);

  std::string_view func_name = name_tok->get_lexeme();
  IdentPtr name_ident = _alloc(IdentifierNode, name_tok, m_symtab->current_scope(), func_name);

  std::vector<ParamPtr> params_vec;
  std::pair<IdentPtr, Type*> return_t = {nullptr, nullptr};
  BlockPtr body_block = nullptr;

  m_symtab->enter_scope();
  try {
    _consume(TokenType::LPAREN);

    if (!match(TokenType::RPAREN)) {
      do {
        params_vec.push_back(parse_function_param());
      } while (match(TokenType::COMMA) && advance());
    }

    _consume(TokenType::RPAREN);

    if (match(TokenType::RETURNS)) {
      return_t = parse_function_return_type();
    } else {
      return_t.second = m_symtab->lookup<Type>("u0", 0);
    }
    _assert(return_t.second != nullptr, "func return type should be non-null");

    if (is_ext) {
      _consume(TokenType::SEMICOLON);
    } else if (match(TokenType::SEMICOLON)) {
      advance(); // consume semicolon for regular (non-extern) forward declaration
    } else {
      body_block = parse_block(false);
    }
  } catch (const ParsePanic&) {
    m_symtab->exit_scope();
    throw;
  }
  m_symtab->exit_scope();

  // construct FunctionType for the symbol table declaration
  std::vector<Type::ParamInfo> ft_params;
  for (const ParamPtr& ast_param : params_vec) {
    ft_params.push_back({ast_param->type, ast_param->is_mutable});
  }

  // it must be at the global scope (no struct methods)
  Type ft(Type::Function(std::move(ft_params), return_t.second), 0);
  std::string_view ft_type_str = m_arena->make_string(ft.to_string());

  // do not redeclare function families
  Type* fn_type = m_symtab->lookup<Type>(ft_type_str, 0);
  if (!fn_type) {
    // it doesn't exist, so we can add it as a new func-type
    fn_type = m_symtab->declare_type(ft_type_str, _alloc(Type, ft), 0);
  }

  Variable* existing_var = m_symtab->lookup<Variable>(func_name, 0);
  if (existing_var) {
    // check signature with prior forward declaration
    if (!(*(existing_var->type) == *fn_type)) {
      m_logger->report(Diag::TypeMismatch(name_tok->get_span(), existing_var->type->to_string(), fn_type->to_string()));
      throw ParsePanic();
    }
  } else {
    // declare it as a var with the associated type
    Variable* var = _alloc(Variable, func_name, name_tok->get_span(),
                 false, fn_type, 0);
    m_symtab->declare_variable(var->name, var, 0);
  }

  return _alloc(FunctionDeclNode, func_tok, m_symtab->current_scope(), is_ext, name_ident,
              std::move(params_vec), return_t.first, return_t.second, body_block);
}

// <Param> ::= <TypePrefix>? Identifier ':' <Type>
ParamPtr Parser::parse_function_param() {
  const Token* first_tok = current();

  bool is_mutable = parse_mutability_prefix();

  const Token* name_tok = current();
  _consume(TokenType::IDENTIFIER);

  std::string_view param_name = name_tok->get_lexeme();
  size_t scope_id = m_symtab->current_scope();

  IdentPtr name_ident = _alloc(IdentifierNode, name_tok, scope_id, param_name);

  _consume(TokenType::COLON);

  Type* type_val = parse_type();

  // declare the parameter as a variable in current scope
  Variable* param_var = _alloc(Variable, param_name, name_tok->get_span(), is_mutable, type_val, scope_id);
  if (!m_symtab->declare_variable(param_var->name, param_var, param_var->scope_id)) {
    m_logger->report(Diag::DuplicateDeclaration(name_tok->get_span(), std::string(param_name)));
    throw ParsePanic();
  }
  return _alloc(ParamNode, first_tok, scope_id, is_mutable, name_ident, type_val);
}

// <ReturnType> ::= 'returns' '(' Identifier ':' <Type> ')'
std::pair<IdentPtr, Type*> Parser::parse_function_return_type() {
  _consume(TokenType::RETURNS);
  _consume(TokenType::LPAREN);

  const Token* name_tok = current();
  _consume(TokenType::IDENTIFIER);
  _consume(TokenType::COLON);

  Type* type_val = parse_type();

  _consume(TokenType::RPAREN);

  std::string_view retvar_name = name_tok->get_lexeme();
  size_t scope_id = m_symtab->current_scope();

  // MutablyOwned is required in a return type variable
  Variable* return_var = _alloc(Variable, retvar_name, name_tok->get_span(),
                      true, type_val, scope_id, true);
  if (!m_symtab->declare_variable(return_var->name, return_var, return_var->scope_id)) {
    m_logger->report(Diag::DuplicateDeclaration(name_tok->get_span(), std::string(retvar_name)));
    throw ParsePanic();
  }

  IdentPtr ident = _alloc(IdentifierNode, name_tok, scope_id, retvar_name);
  return {ident, type_val};
}

bool Parser::is_next_var_decl() {
  if (match(TokenType::MUT) || match(TokenType::IMM)) {
    return true;
  } else if (match(TokenType::IDENTIFIER)) {
    // with either colon or walrus it will be a variable declaration
    if ((peek_next(TokenType::COLON) || peek_next(TokenType::WALRUS))) {
      return true;
    }
  }
  return false;
}

// Statements
StmtPtr Parser::parse_statement() {
  try {
    // Handle case where the identifier can be the start of a var declaration
    if (is_next_var_decl()) {
      return parse_var_decl();
    }

    TokenType type = current()->get_type();
    switch (type) {
      case TokenType::IF: return parse_if_stmt();
      case TokenType::FOR: return parse_for_stmt();
      case TokenType::WHILE: return parse_while_stmt();
      case TokenType::SWITCH: return parse_switch_stmt();
      case TokenType::READ:
      {
        const Token* read_tok = advance();
        ExprPtr expr = parse_expression(); // should be an identifier, verified by type checker
        _consume(TokenType::SEMICOLON);
        return _alloc(ReadStmtNode, read_tok, m_symtab->current_scope(), expr);
      }
      case TokenType::PRINT: return parse_print_stmt();
      case TokenType::LBRACE: return parse_block(true);
      case TokenType::RETURN: return parse_return_stmt();
      case TokenType::BREAK: return parse_break_stmt();
      case TokenType::CONTINUE: return parse_continue_stmt();
      case TokenType::FREE: return parse_free_stmt();
      case TokenType::ERROR_KW: return parse_error_stmt();
      case TokenType::EXIT_KW: return parse_exit_stmt();
      case TokenType::ASM: return parse_asm_block();
      default: // <Expr> ';'
      {
        const Token* expr_start_tok = current();
        ExprPtr expr = parse_expression();
        _consume(TokenType::SEMICOLON);
        return _alloc(ExpressionStatementNode, expr_start_tok, m_symtab->current_scope(), expr);
      }
    }
  } catch (const ParsePanic&) {
    /* instead of propagating this to the top-level we want to isolate the error to this one statement,
       so that we don't invalidate the entirety of whatever function we are in */
    PoisonStmtNode* poison = _alloc(PoisonStmtNode, current(), m_symtab->current_scope());
    synchronize();
    return poison;
  }
}

// <VarDecl> ::= <TypePrefix>? Identifier ( ( ':' <Type> ( '=' <Expr> )? ) | ( ':=' <Expr> ) )
StmtPtr Parser::parse_var_decl() {
  const Token* start_tok = current();

  bool is_mutable = parse_mutability_prefix();

  const Token* name_tok = current();
  _consume(TokenType::IDENTIFIER);

  std::string_view var_name = name_tok->get_lexeme();
  size_t scope_id = m_symtab->current_scope();

  IdentPtr name_ident = _alloc(IdentifierNode, name_tok, scope_id, var_name);

  Type* type_val = nullptr;
  ExprPtr initializer = nullptr;

  if (match(TokenType::COLON)) { // ':' <Type> ( '=' <Expr> )?
    // explicit type declaration
    advance();
    type_val = parse_type();
    if (match(TokenType::EQUAL)) {
      advance();
      initializer = parse_expression();
    }
  } else if (match(TokenType::WALRUS)) { // ':=' <Expr>
    // inferred type declaration (type_val is nullptr)
    advance();
    initializer = parse_expression();
  } else {
    m_logger->report(Diag::ExpectedToken(current()->get_span(), ": | :=", token_type_to_string(current()->get_type())));
    throw ParsePanic();
  }

  _consume(TokenType::SEMICOLON);

  Variable* var_sym = _alloc(Variable, var_name, name_tok->get_span(), is_mutable, type_val, scope_id);

  // check if it is a duplicate variable
  if (!m_symtab->declare_variable(var_sym->name, var_sym, var_sym->scope_id)) {
    m_logger->report(Diag::DuplicateDeclaration(name_tok->get_span(), std::string(var_name)));
    throw ParsePanic();
  }
  return _alloc(VariableDeclNode, start_tok, scope_id, is_mutable, name_ident, type_val, initializer);
}

// <IfStmt> ::= 'if' '(' <Expr> ')' <Block> ( 'else' ( <Block> | <IfStmt> ) )?
StmtPtr Parser::parse_if_stmt() {
  const Token* if_tok = current();
  _consume(TokenType::IF);
  _consume(TokenType::LPAREN);

  ExprPtr condition = parse_expression();
  _consume(TokenType::RPAREN);

  BlockPtr then_branch = parse_block(true);

  BlockPtr else_branch = nullptr;
  if (match(TokenType::ELSE)) {
    advance();
    if (match(TokenType::IF)) {
      // else if block
      StmtPtr else_if_stmt = parse_if_stmt();
      const Token* else_if_tok = else_if_stmt->token;
      else_branch = _alloc(BlockNode, else_if_tok, m_symtab->current_scope(),
                         std::vector<StmtPtr>{else_if_stmt});
    } else {
      // else block
      else_branch = parse_block(true);
    }
  }
  return _alloc(IfStmtNode, if_tok, m_symtab->current_scope(), condition,
              then_branch, else_branch);
}

// <ForStmt> ::= 'for' '(' <Expr>? ';' <Expr>? ';' <Expr>? ')' <Block>
StmtPtr Parser::parse_for_stmt() {
  const Token* for_tok = current();
  _consume(TokenType::FOR);

  std::optional<std::variant<ExprPtr, StmtPtr>> initializer = std::nullopt;
  ExprPtr condition = nullptr, iteration = nullptr;
  BlockPtr body = nullptr;

  m_symtab->enter_scope();
  try{
    _consume(TokenType::LPAREN);

    bool has_initializer = !match(TokenType::SEMICOLON);
    if (has_initializer && is_next_var_decl()) {
      initializer = parse_var_decl(); // consumes the semicolon
    } else {
      if (has_initializer) {
        initializer = parse_expression();
        // does not consume the semicolon
      }
      _consume(TokenType::SEMICOLON);
    }

    if (!match(TokenType::SEMICOLON)) {
      condition = parse_expression();
    }
    _consume(TokenType::SEMICOLON);

    if (!match(TokenType::RPAREN)) {
      iteration = parse_expression();
    }
    _consume(TokenType::RPAREN);

    body = parse_block(true);
  } catch (const ParsePanic&) {
    m_symtab->exit_scope();
    throw;
  }
  m_symtab->exit_scope();

  return _alloc(ForStmtNode, for_tok, m_symtab->current_scope(),
              std::move(initializer), condition, iteration, body);
}

// <WhileStmt> ::= 'while' '(' <Expr> ')' <Block>
StmtPtr Parser::parse_while_stmt() {
  const Token* while_tok = current();
  _consume(TokenType::WHILE);

  _consume(TokenType::LPAREN);

  ExprPtr condition = parse_expression();
  _consume(TokenType::RPAREN);

  BlockPtr body = parse_block(true);

  return _alloc(WhileStmtNode, while_tok, m_symtab->current_scope(), condition, body);
}

// <SwitchStmt> ::= 'switch' '(' <Expr> ')' '{' <Case>* '}'
StmtPtr Parser::parse_switch_stmt() {
  const Token* switch_tok = current();
  _consume(TokenType::SWITCH);
  _consume(TokenType::LPAREN);

  ExprPtr expression = parse_expression();
  _consume(TokenType::RPAREN);
  _consume(TokenType::LBRACE);

  std::vector<CasePtr> cases;
  while (!match(TokenType::RBRACE)) {
    // <Case> ::= 'case' <CasePattern> ':' <Block> | 'default' ':' <Block>
    const Token* case_tok = current();
    if (match(TokenType::CASE)) {
      advance();
      // check for enum match: Identifier '::' Identifier ('(' Identifier ')')? ':'
      if (match(TokenType::IDENTIFIER) && peek_next(TokenType::COLON_COLON)) {
        const Token* enum_name_tok = current();
        advance(); advance();
        const Token* variant_name_tok = current();
        _consume(TokenType::IDENTIFIER);

        IdentPtr enum_ident = _alloc(IdentifierNode, enum_name_tok, m_symtab->current_scope(), enum_name_tok->get_lexeme());
        IdentPtr variant_ident = _alloc(IdentifierNode, variant_name_tok, m_symtab->current_scope(), variant_name_tok->get_lexeme());

        IdentPtr payload_ident = nullptr;
        if (match(TokenType::LPAREN)) {
          advance();
          const Token* payload_tok = current();
          _consume(TokenType::IDENTIFIER);
          payload_ident = _alloc(IdentifierNode, payload_tok, m_symtab->current_scope(), payload_tok->get_lexeme());
          _consume(TokenType::RPAREN);
        }

        _consume(TokenType::COLON);
        BlockPtr body = parse_block(true);
        cases.push_back(_alloc(CaseNode, case_tok, m_symtab->current_scope(), enum_ident, variant_ident, payload_ident, body));
      } else {
        // standard integer/expression match
        ExprPtr value = parse_expression();
        _consume(TokenType::COLON);
        BlockPtr body = parse_block(true);
        cases.push_back(_alloc(CaseNode, case_tok, m_symtab->current_scope(), value, body));
      }
    } else if (match(TokenType::DEFAULT)) {
      advance();
      _consume(TokenType::COLON);
      BlockPtr body = parse_block(true);
      cases.push_back(_alloc(CaseNode, case_tok, m_symtab->current_scope(), body));
    } else {
      m_logger->report(Diag::ExpectedToken(current()->get_span(), "case | default", token_type_to_string(current()->get_type())));
      throw ParsePanic();
    }
  }

  _consume(TokenType::RBRACE);
  return _alloc(SwitchStmtNode, switch_tok, m_symtab->current_scope(), expression, std::move(cases));
}

// <PrintStmt> ::= 'print'  <Expr> ( ',' <Expr> )*
StmtPtr Parser::parse_print_stmt() {
  const Token* print_tok = current();
  _consume(TokenType::PRINT);

  std::vector<ExprPtr> exprs;
  do {
    exprs.push_back(parse_expression());
  } while (match(TokenType::COMMA) && advance());
  _consume(TokenType::SEMICOLON);
  return _alloc(PrintStmtNode, print_tok, m_symtab->current_scope(), std::move(exprs));
}

// == Expression Parsing ==
ExprPtr Parser::parse_expression() {
  // start with lowest precedence in recursive descent
  return parse_assignment();
}

// <ReturnStmt> ::= 'return' <Expr>?
StmtPtr Parser::parse_return_stmt() {
  const Token* ret_tok = current();
  _consume(TokenType::RETURN);

  ExprPtr value = nullptr;
  if (!match(TokenType::SEMICOLON)) {
    value = parse_expression();
  }
  _consume(TokenType::SEMICOLON);

  return _alloc(ReturnStmtNode, ret_tok, m_symtab->current_scope(), value);
}

// <BreakStmt> ::= 'break'
StmtPtr Parser::parse_break_stmt() {
  const Token* break_tok = current();
  _consume(TokenType::BREAK);
  _consume(TokenType::SEMICOLON);
  return _alloc(BreakStmtNode, break_tok, m_symtab->current_scope());
}

// <ContinueStmt> ::= 'continue'
StmtPtr Parser::parse_continue_stmt() {
  const Token* cont_tok = current();
  _consume(TokenType::CONTINUE);
  _consume(TokenType::SEMICOLON);
  return _alloc(ContinueStmtNode, cont_tok, m_symtab->current_scope());
}

// <FreeStmt> ::= 'free' '[]'? <Expr>
StmtPtr Parser::parse_free_stmt() {
  const Token* free_tok = current();
  _consume(TokenType::FREE);

  ExprPtr expr = parse_expression();
  _consume(TokenType::SEMICOLON);

  return _alloc(FreeStmtNode, free_tok, m_symtab->current_scope(), expr);
}

// <ErrorStmt> ::= 'error' <Expr> ( ',' <Expr> )*
StmtPtr Parser::parse_error_stmt() {
  const Token* error_tok = current();
  _consume(TokenType::ERROR_KW);

  std::vector<ExprPtr> exprs;
  do {
    exprs.push_back(parse_expression());
  } while (match(TokenType::COMMA) && advance());
  _consume(TokenType::SEMICOLON);

  return _alloc(ErrorStmtNode, error_tok, m_symtab->current_scope(), std::move(exprs));
}

// <ExitStmt> ::= 'exit' <Expr>?
StmtPtr Parser::parse_exit_stmt() {
  const Token* exit_tok = current();
  _consume(TokenType::EXIT_KW);

  // same as ReturnStmt
  ExprPtr value = nullptr;
  if (!match(TokenType::SEMICOLON)) {
    value = parse_expression();
  }
  _consume(TokenType::SEMICOLON);

  return _alloc(ExitStmtNode, exit_tok, m_symtab->current_scope(), value);
}
